<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/optionLayout"
    android:background="#60b8d5">
    <ImageView
        android:src="@drawable/settings_logo"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:scaleType="center"
        android:background="#FFFFBB33"
        android:contentDescription="@string/app_name" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView2"
        android:padding="@dimen/abc_action_bar_stacked_max_height"
        android:visibility="visible"
        android:fillViewport="false">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <View
                android:layout_width="250dp"
                android:layout_height="5dp"
                android:background="#47ac68" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/your_move"
                    android:id="@+id/textView4" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New Text"
                    android:id="@+id/playerWins"
                    android:layout_marginLeft="50dp" />
            </LinearLayout>

            <EditText
                style="@style/Base.TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jugador"
                android:inputType="textNoSuggestions|textVisiblePassword"
                android:singleLine="true"
                android:lines="1"
                android:scrollHorizontally="true"
                android:ellipsize="end"
                android:focusable="false"
                android:id="@+id/TextJugador"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/transparent" />

            <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New ToggleButton"
                android:id="@+id/toggleButton"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/optionMessage"
                android:id="@+id/textView5" />
            <View
                android:layout_width="250dp"
                android:layout_height="5dp"
                android:background="#47ac68" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Switch
                    android:layout_width="157dp"
                    android:layout_height="59dp"
                    android:text="@string/second_player"
                    android:id="@+id/switchSecondPlayer"
                    android:checked="true"
                    android:textColor="#000000"
                    android:visibility="gone"
                    tools:targetApi="ice_cream_sandwich"
                    />

                <ToggleButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/second_player"
                    android:checked="true"
                    android:id="@+id/toggleSecondPlayer"
                    android:visibility="gone"/>


            </LinearLayout>


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/cpuLayout"
                android:visibility="gone">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ia"
                        android:id="@+id/textView6"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="New Text"
                        android:id="@+id/davidWins"
                        android:layout_marginLeft="80dp"
                        android:layout_gravity="center" />
                </LinearLayout>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:id="@+id/radioGroup">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/easy"
                        android:id="@+id/radioEasy" />
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hard"
                        android:id="@+id/radioHard" />
                </RadioGroup>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/iaOptionMessage"
                    android:id="@+id/textView7" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/secondLayout"
                android:visibility="gone">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/secondP"
                        android:id="@+id/textView" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="New Text"
                        android:id="@+id/splayerWins"
                        android:layout_marginLeft="40dp" />
                </LinearLayout>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rival"
                    android:id="@+id/editTextSecond"
                    android:inputType="textNoSuggestions|textVisiblePassword"
                    android:focusable="false"
                    android:singleLine="true"
                    android:lines="1"
                    android:scrollHorizontally="true"
                    android:ellipsize="end"
                    android:layout_gravity="center_horizontal"
                    android:background="@android:color/transparent"
                    style="@style/Base.TextAppearance.AppCompat.Title" />
            </LinearLayout>

            <View
                android:layout_width="250dp"
                android:layout_height="5dp"
                android:background="#47ac68" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:id="@+id/dismissButton"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>